clean code: update imports, remove comments, simplify variables
FireStationFinder.java:
In getFireStationAddressesCoverage():
 - use method references (FireStationMapper::method).
 - normalize strings via StringFormatter.
 - replace collect(Collectors.toList()) with toList() method.
 - replace StationNotFoundException with ResourceNotFoundException in catch blocks.
 - simplify direct returns for a better readability.
 - improve and format Javadoc.

 StationNotFoundException.java: remove unnecessary exception, replace with ResourceNotFoundException.